instagram lab TomasAldea

--- a/index.html
+++ b/index.html
@@ -4,13 +4,66 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
+
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+    <!---Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Jobs Privacy Terms &copy; 2014 Instagram--->
+ 
+  <!-- <section> 
+  <div class="fondoAzul">
+  awdawd
+  </div>
+
+  </section>
+
+  <section>
+
+
+  </section> -->
+  <div class="double-color">
+    <div class="row margin-top">
+      <div> <!--FOTO TELEFONO-->
+        <img class="jpg-mobile" src="/images/phones.png" alt="" width="50%">
+      </div>
+      <div>
+       <div class="row"> <!--logo instagram + login-->
+         <img src="/images/brand.png" alt="" width="35%"><!--logo instagram-->
+         <button class="btn"><img style="width: 30%;" src="images/home.png"> Log in</button>  <!--boton home-->
+
+        </div>
+       <div> <!--foto con texto encima-->
+        <div class="text-centeredone">Capture and Share <br> the World's Moments</div>
+        <div class="text-centeredtwo">Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free?</div>
+        <img src="/images/frame.png" alt="" width="50%">
+       <div> 
+        <img src="images/badge-iphone.png" alt="" width="20%">
+        <img src="images/badge-android.png" alt="" width="20%">
+       </div>
+       
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer style="text-align-last: center;">
+    <a class="margin-listado">ABOUT US</a>
+    <a class="margin-listado">SUPPORT</a>
+    <a class="margin-listado">BLOGS</a>
+    <a class="margin-listado">PRESS</a>
+    <a class="margin-listado">API</a>
+    <a class="margin-listado">JOBS</a>
+    <a class="margin-listado">PRIVACY</a>
+    <a style="color: grey; font-size: 8px ; margin-left: 18px ;">2014 INSTAGRAM</a>
+  </footer>
+
+
+
+
   </body>
+
 </html>
