--- a/index.html
+++ b/index.html
@@ -4,13 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="/styles/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <article class="bg">
+        <div class="container">
+        <div class="mobil"><img alt="mobile" src="/images/phones.png"></div>
+        <div class="info">
+            <div class="logo">
+              <img alt="instagram" src="/images/brand.png" class="brand">
+              <button class="button"><img alt="loginin" src="/images/home.png"><span>Login in</span></button>
+            </div>
+            <div class="difuminado">
+              <div class="texto">
+                <h2>Capture and Share<br/> the World's Moments</h2>
+              <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+              friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+              </div>
+            <div class="descargas">
+              <img alt="appStore" src="/images/badge-iphone.png">
+              <img alt="GooglePlay" src="/images/badge-android.png">
+            </div>
+          </div>
+        </div>
+        </div>
+      </article>
+    </main>
+    <footer>
+<div class="footerclass">
+  <nav>
+    <ol>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    
+  </ol> </nav>
+   <span> &copy; 2014 Instagram</span>  
+</div>
+    </footer> 
   </body>
 </html>
