--- a/index.html
+++ b/index.html
@@ -4,13 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles\style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <div class="imagetop">
+        <img class="logo" src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/images/brand.png?raw=true" alt="logo" />
+        <Button class="login"><img src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/images/home.png?raw=true" alt="home"/>Log in</Button>
+      </div>
+    </header>
+    <div class= droite>
+      <img class="phones" src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/images/phones.png?raw=true" alt="phone" /> 
+    </div>
+    <div class= "centre">
+      <h1>Capture and Share <br> the World's Moments</h1><br><br>
+      <p>Instagram is a <span>fast</span>, <span>beautiful</span>  and <span>fun</span> way to share your life <br>
+        with friends and family.<br><br>
+        Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram
+        &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br>
+        new way to see the world.<br><br>
+        Oh yeah, did we mention it's free?</p>
+    </div>
+    <div class= "download">
+        <img class="applestore" src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/images/badge-iphone.png?raw=true" alt="applestore" />
+        <img class="googleplay" src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/images/badge-android.png?raw=true" alt="googleplay" />
+    </div>
+    <footer>
+      <ul>
+        <a href="#">ABOUT US</a>
+        <a href="#">SUPPORT</a>
+        <a href="#">BLOG</a>
+        <a href="#">PRESS</a>
+        <a href="#">API</a>
+        <a href="#">JOBS</a>
+        <a href="#">PRIVACY</a>
+        <a href="#">TERMS</a>
+       &copy; 2014 Instagram
+      </ul>
+  </footer>
   </body>
 </html>
