--- a/index.html
+++ b/index.html
@@ -4,13 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+      <main>
+          <article>
+            <section class="leftSide"><img class="desktopImage" src="./images/phones.png" alt="phones"/></section>
+  <section class="rightSide">
+    <div class="logo"><img class="logotype" src="./images/brand.png" alt="brand" />
+      <a href="" class="log">Log in</a>
+    </div>
+    <div class="data">
+    <h1>Capture and Share<br>the World's Moments</h1>
+    <img class="mobileImage" src="./images/phones.png"/>
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+      friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+     <p>Oh yeah, did we mention it's free?</p> 
+      <img class="leftImage" src="./images/badge-iphone.png" alt="badge-iphone"/>
+      <img class="rightImage" src="./images/badge-android.png" alt="badge-android"/>
+     </div>
+    </section>
+  </article>
+</main>
+    <footer>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+    </footer> 
   </body>
 </html>
