--- a/index.html
+++ b/index.html
@@ -3,14 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="container-top" style="background-image: url(/images/bgtile.png);"></section>
+    <div class="row">
+      <div class="column1">
+        <img class="imgIphone" src="images/phones.png"/>
+      </div>
+      <div class="column2">
+        <div class="logoYBoton">
+          <img src="images/brand.png" class="logo" />
+          <button class="buttonLogin">
+            <img class="imgHouse" src="images/home.png" /><strong >Log in</strong>
+          </button>
+        </div>
+        <div class="textContainer">
+          <h2>Capture and Share <br>
+          the World's Moments
+          </h2>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life <br>
+            with friends and family.<br>
+            <br>
+            Take a picture or video, choose a filter to transform its look <br>
+            and feel, then post to Instagram &mdash; it's that easy. You can <br>
+            even share to Facebook, Twitter, Tumblr and more. It's a <br>
+            new way to see the world. <br>
+            <br>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div>
+          google 
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <ul>
+        <li>About Us</li> 
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li> 
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li> 
+      </ul>
+    </div>
   </body>
 </html>
