--- a/index.html
+++ b/index.html
@@ -1,16 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>IG Clone</title>
+  <link rel="stylesheet" href="/styles/style.css">
+  <!-- don't forget to link your styles -->
+</head>
+
+<body>
+  <div class="background"></div>
+   <div class= "phone">
+    <img src="images\phones.png" alt="Smartphones"/>
+   </div>
+  
+  <div class = "section1">
+  <div class="logo-log">
+    <button class="home-btn">
+      <img src="/images/home.png" alt="home-icon"/>
+      <b>log in</b> 
+    </button>
+    </div>
+  <div class="text">
+    <img src="images\brand.png" alt="ig-logo"/>
+<h1>Capture and Share <br> 
+  the Worlds best Moments</h1>
+<p class = "box-paragraph">
+ Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life <br>
+   with friends and family.<br>
+
+  Take a picture or video, choose a filter to transform its look <br>
+  and feel, then post to Instagram - it’s that easy. You can <br>
+  even share to Facebook, Twitter, Tumblr and more. It’s a <br>
+  new way to see the world.<br>
+
+  Oh yeah, did we mention it’s free?<br>
+</p>
+<div class="bottons">
+  <img src = "images/badge-iphone.png" href="#"/>
+  <img src="images/badge-android.png" href="#"/>
+</div>
+</div>
+</div>
+</div>
+
+  <footer>
+    <ul>
+     <li> ABOUT US</li>
+     <li>SUPPORT</li>
+     <li>BLOG</li>
+     <li> PRESS</li>
+     <li>API</li>
+     <li>JOBS</li>
+     <li>PRIVACY</li>
+     <li>TERMS</li>
+     <li id>2014 Instagram</li>
+    </ul>
+  </footer>
+
+</body>
+
 </html>
+
+</html> 
