--- a/index.html
+++ b/index.html
@@ -4,13 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Instagram Capture and Share the World's Moments Instagram is a
+    <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share your life
+    with friends and family. Take a picture or video, choose a filter to
+    transform its look and feel, then post to Instagram &mdash; it's that easy.
+    You can even share to Facebook, Twitter, Tumblr and more. It's a new way to
+    see the world. Oh yeah, did we mention it's free? Download on the App Store
+    Get it on Google Play
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="/about">About Us</a></li>
+          <li><a href="/support">Support</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/press">Press</a></li>
+          <li><a href="/api">API</a></li>
+          <li><a href="/jobs">Jobs</a></li>
+          <li><a href="/privacy">Privacy</a></li>
+          <li><a href="/terms">Terms</a></li>
+          <span>&copy; 2014 Instagram</span>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
