Starting on stylesheet

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a
-    <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share your life
-    with friends and family. Take a picture or video, choose a filter to
-    transform its look and feel, then post to Instagram &mdash; it's that easy.
-    You can even share to Facebook, Twitter, Tumblr and more. It's a new way to
-    see the world. Oh yeah, did we mention it's free? Download on the App Store
-    Get it on Google Play
+    <main>
+      Instagram Capture and Share the World's Moments Instagram is a
+      <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share your life
+      with friends and family. Take a picture or video, choose a filter to
+      transform its look and feel, then post to Instagram &mdash; it's that
+      easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new
+      way to see the world. Oh yeah, did we mention it's free? Download on the
+      App Store Get it on Google Play
+    </main>
     <footer>
       <nav>
         <ul>
