--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+  
+<body>
+  <main class=upper-container>
+    <div >  
+      <div class=container> 
+        <img src="./images/phones.png" alt="Instagram view">
+      </div>
+      <div>
+        <img src="./images/brand.png"  alt="Instagram">
+          <button class=login-CTA>
+            <img src="./images/home.png" alt="home">
+            <p><a href="">Log in</a></p>
+          </button>
+      <div class=body>
+        <h1>Capture and Share the World's Moments</h1> 
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+      friends and family. </p>
+        </br>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        </br>  
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+
+      <div>
+        <img src="./images/badge-iphone.png" alt="Download on the App Store">
+        <img src="./images/badge-android.png" alt="Get it on Google Play">
+      </div>
+      </div>
+    </div>
+  </main>  
+
+<footer>
+    <div>
+      <ul class=footer>  
+      <li><a href="">About Us</a></li>
+      <li><a href="">Support</a></li>
+      <li><a href="">Press</a></li>
+      <li><a href="">API</a></li>
+      <li><a href="">Jobs</a></li>
+      <li><a href=""> Privacy</a></li>
+      <li><a href="">Terms</a></li>
+      <li id=trademark> &copy; 2014 Instagram</li>
+      </ul>
+    </div>
+</footer>
+</body>
 </html>
