Setup of initial flex framework

--- a/index.html
+++ b/index.html
@@ -8,13 +8,38 @@
   </head>
   <body>
     <main>
-      Instagram Capture and Share the World's Moments Instagram is a
-      <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share your life
-      with friends and family. Take a picture or video, choose a filter to
-      transform its look and feel, then post to Instagram &mdash; it's that
-      easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new
-      way to see the world. Oh yeah, did we mention it's free? Download on the
-      App Store Get it on Google Play
+      <div class="blue-background"></div>
+      <section class="main-content">
+        <div class="container-main">
+          <div class="container-left">
+            <img src="/images/phones.png" alt="Photo of Phones" />
+          </div>
+          <div class="container-right">
+            <div class="container-right-top">
+              <img src="/images/brand.png" alt="" />
+              <button class="login-button">
+                <img src="/images/home.png" alt="" />Log In
+              </button>
+            </div>
+            <div class="container-right-middle">
+              <header>
+                <h1>Captures and Share the World's Moments</h1>
+              </header>
+              <p>
+                Instagram Capture and Share the World's Moments Instagram is a
+                <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share
+                your life with friends and family. Take a picture or video,
+                choose a filter to transform its look and feel, then post to
+                Instagram &mdash; it's that easy. You can even share to
+                Facebook, Twitter, Tumblr and more. It's a new way to see the
+                world. Oh yeah, did we mention it's free?
+              </p>
+            </div>
+            <div class="container-right-bottom"></div>
+          </div>
+        </div>
+      </section>
+      Download on the App Store Get it on Google Play
     </main>
     <footer>
       <nav>
