--- a/index.html
+++ b/index.html
@@ -7,10 +7,40 @@
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main class = "main-container">
+      <div class = "phone-container-image">
+        <img id="phones" src="images/phones.png" alt="Phones">
+      </div>
+      <div class = "container-right">
+      <div class = "log-in">
+      <img id="instagram-logo" src="images/brand.png" alt="Instagram brand logo">
+      <button class="log-in"> Log in </button>
+      </div>
+      <div class = "main-text">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.</p>
+          <p>ake a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class = "download-app">
+        <img id="badge-iphone" src="images/badge-iphone.png" alt="iphone badge">
+        <img id="badge-android" src="images/badge-android.png" alt="android badge">
+      </div>
+      </div>
+      </main>
+      <footer>
+        <ul class = "footer-section">
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
   </body>
 </html>
