--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link href="styles/style.css" rel="stylesheet">
   </head>
   <body>
+    <div id="background-color-element"></div>
+    <section id="main-section">
+      <div id="screens-container">
+        <img id="phones-image" src="images/phones.png" alt="app-screens">
+      </div>
+
+
+      <div id="info-container">
+        <div><img id="logo" src="images/brand.png" alt="logo"></div>
+        <div id="card"></div>
+      </div>
+    </section>
     Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
