--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <link rel="stylesheet" href="./styles/style.css/stylesheet"/>    
+    <link rel="stylesheet" href="./styles/stylesheet"/>    
   </head>
 
 
