--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
 
 
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+    <section 1>
+    Instagram 
+    
+    <h1>Capture and Share the World's Moments</h1>
+     
+    <p>Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
+    Oh yeah, did we mention it's free?</p>
+    Download on the App Store Get it on Google Play About Us Support Blog Press API
     Jobs Privacy Terms &copy; 2014 Instagram
+  </section>
   </body>
 </html>
