--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 
   <body>
     <section 1>
-    Instagram 
+      <div> 
+        <img class= "phones" src= "images/phones.png" alt= "phones"/>
+    </div>
+      Instagram 
     
     <h1>Capture and Share the World's Moments</h1>
-     
+
     <p>Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
