Corrections html structure

--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <section>
+    <section class="smartphones-pic">
       <img src="images/phones.png" alt="Image of two smartphones">
     </section>
-    <section>
+    <section class="Logo-LogIn">
       <img src="images/brand.png" alt="Instagram Logo">
-      <button type="submit">
+      <button type="submit" class="login">
         <img src="images/home.png" alt="Home Logo">
         Log in
       </button>
     </section>
-    <section>
+    <section class="text-section">
       <h1>
         Instagram Capture and Share the World's Moments
       </h1>
       <p>
-        Instagram is a fast, beautiful and fun way to share your life with
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
         friends and family.
       </p>
       <p>
@@ -33,22 +33,26 @@
         Oh yeah, did we mention it's free?
       </p>
       <button type="submit">
-        <img src="images/badge-iphone.png" alt="Download on the App Store">
+        <a href="#" alt="Download on the App Store">
+          <img src="images/badge-iphone.png" alt="Download on the App Store">
+        </a>
       </button>
       <button type="submit">
-        <img src="images/badge-android.png" alt="Get it on Google Play">
+        <a href="#" alt="Get it on Google Play">
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+        </a>
       </button>
     </section>
-    <footer>
-      <a href="#">About Us</a>
-      <a href="#">Support</a>
-      <a href="#">Blog</a>
-      <a href="#">Press</a>
-      <a href="#">API</a>
-      <a href="#">Jobs</a>
-      <a href="#">Privacy</a>
-      <a href="#">Terms</a>
-      <a href="#">&copy; 2014 Instagram</a>
+    <footer class="footer">
+      <a href="#" alt="About Us">About Us</a>
+      <a href="#" alt="Support">Support</a>
+      <a href="#" alt="Blog">Blog</a>
+      <a href="#" alt="Press">Press</a>
+      <a href="#" alt="API">API</a>
+      <a href="#" alt="Jobs">Jobs</a>
+      <a href="#" alt="Privacy">Privacy</a>
+      <a href="#" alt="Terms">Terms</a>
+      <a href="#" alt="&copy; 2014 Instagram" class="copyright">&copy; 2014 Instagram</a>
     </footer>
   </body>
 </html>
