--- a/index.html
+++ b/index.html
@@ -21,8 +21,21 @@
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free?</p>
-    Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Download on the App Store Get it on Google Play 
+    
+    <footer>
+      <ul>
+        <li> <a href="#"> About Us </a> </li>
+        <li> <a href="#"> Support </a> </li>
+        <li> <a href="#"> Blog </a> </li>
+        <li> <a href="#"> Press </a> </li>
+        <li> <a href="#"> API </a> </li>
+        <li> <a href="#"> Jobs </a> </li>
+        <li> <a href="#"> Privacy </a> </li>
+        <li> <a href="#"> Terms</a> </li>
+      </ul>
+      &copy; 2014 Instagram
+    </footer>
   </section>
   </body>
 </html>
