--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <div> 
+      <img class= "brand" src= "images/brand.png" alt= "brand"/>
+  </div>
     <link rel="stylesheet" href="./style.css" />  
   </head>
 
