--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div> 
       <img class= "brand" src= "images/brand.png" alt= "brand"/>
   </div>
-    <link rel="stylesheet" href="./style.css" />  
+    <link rel="style" href="./style.css" />  
   </head>
 
 
