--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./style.css/style.css" />  
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <div> 
       <img class= "brand" src= "images/brand.png" alt= "brand"/>
   </div>
-    <link rel="stylesheet" href="./styles/style.css" />  
+  <div class="log in">
+    <a href= " # " class= "log in"> Log in</a>
+    </div> 
   </head>
 
 
