--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./style.css/style.css" />  
+    <link rel="stylesheet" href="./styles/style.css" />  
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
@@ -29,7 +29,7 @@
     Oh yeah, did we mention it's free?</p>
     Download on the App Store Get it on Google Play 
     
-    <footer>
+    <footer class="footer">
       <ul>
         <li> <a href="#"> About Us </a> </li>
         <li> <a href="#"> Support </a> </li>
