--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <div> 
       <img class= "brand" src= "images/brand.png" alt= "brand"/>
   </div>
-  <div class="log in">
-    <a href= " # " class= "log in"> Log in</a>
+  <div class="log-in">
+    <a href= " # " class= "log-in"> Log in</a>
     </div> 
   </head>
 
