--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div> 
         <img class= "brand" src= "images/brand.png" alt= "brand"/>
     </div>
-    <div class="log-in">
-      <a href= " # " class="log-in"> Log in</a>
+    <div>
+      <a href= " # " class="log-in-button"> Log in</a>
       </div> 
       <div> 
         <img class= "phones" src= "images/phones.png" alt= "phones"/>
