--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free?</p>
+    <div> 
+      <img class= "frame" src= "images/frame.png" alt= "frame"/>
+  </div>
+
     Download on the App Store Get it on Google Play 
     
     <footer class="footer">
