--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <img src="images/phones.png" alt="Phones image" />
 
-      <section class="promo">
+      <section>
         <header>
           <img src="/images/brand.png" alt="Instagram logo and title" />
           <a href="#">
@@ -37,33 +37,39 @@
           <a href="https://www.apple.com/es/ios/app-store/">
             <img src="/images/badge-iphone.png" alt="AppStore link" />
           </a>
+
           <a href="https://play.google.com/store?gl=ES">
-            <img src="/images/badge-android.png" alt="Google play link" />
+            <img
+              class="btn-margin"
+              src="/images/badge-android.png"
+              alt="Google play link"
+            />
           </a>
         </article>
       </section>
-
-      <footer>
-        <ul class="legal">
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Press</a></li>
-          <li><a href="#">API</a></li>
-          <li><a href="#">Jobs</a></li>
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Terms</a></li>
-        </ul>
-
-        <p>&copy; 2014 Instagram</p>
-      </footer>
     </main>
-    <!-- Instagram Capture and Share the World's Moments Instagram is a fast,
+
+    <footer>
+      <ul class="legal">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+
+      <p>&copy; 2014 Instagram</p>
+    </footer>
+  </body>
+
+  <!-- Instagram Capture and Share the World's Moments Instagram is a fast,
     beautiful and fun way to share your life with friends and family. Take a
     picture or video, choose a filter to transform its look and feel, then post
     to Instagram &mdash; it's that easy. You can even share to Facebook,
     Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we
     mention it's free? Download on the App Store Get it on Google Play About Us
     Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram -->
-  </body>
 </html>
