--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
 
   <body>
     <section 1>
-      <div> 
+  
         <img class= "brand" src= "images/brand.png" alt= "brand"/>
-    </div>
-    <div>
+        <div>
       <a href= " # " class="log-in-button"> Log in</a>
-      </div> 
-      <div> 
+      </div>
         <img class= "phones" src= "images/phones.png" alt= "phones"/>
-    </div>
+  
 
       Instagram 
     
@@ -28,9 +26,9 @@
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free?</p>
-  
+    <img class= "appstore" src= "badge-iphone.png" alt= "appstore"/> 
+    <img class= "android" src= "images/badge-android.png" alt= "android"/>
 
-    Download on the App Store Get it on Google Play 
     
     <footer class="footer">
       <ul>
