--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         </header>
 
         <article>
-          <h1>Capture and Share the World's Moments</h1>
+          <h1>
+            Capture and Share <br />
+            the World's Moments
+          </h1>
           <p>
             Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
             <strong>fun</strong> way to share your life with friends and family.
