--- a/index.html
+++ b/index.html
@@ -4,13 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link href="styles/style.css" rel="stylesheet">
   </head>
+  
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  
+  <section>
+    <div class="phones"><img src="images/phones.png"></div>
+    <div class="rightsection">
+      <header>
+        <img src="images/brand.png">
+        <div class="login_button">
+          <a href="#"><img src="images/home.png"></a>
+          <a href="#">Log in</a>
+      </div>
+      </header>
+      <article>
+      <h1> Capture and Share the World's Moments</h1>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+      friends and family. </p>
+      <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p> 
+      <a href="#"><img src="images/badge-iphone.png"></a>
+      <a href="#"><img src="images/badge-android.png"></a>
+      </article>
+    </div>
+  </section>
+  <nav>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#" class="greylink">&copy; 2014 Instagram</a></li>
+    </ul>
+  </nav>
   </body>
 </html>
