--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <section 1>
-  
+      <div class="section-1">
         <img class= "brand" src= "images/brand.png" alt= "brand"/>
         <div>
       <a href= " # " class="log-in-button"> Log in</a>
@@ -28,7 +28,7 @@
     Oh yeah, did we mention it's free?</p>
     <img class= "appstore" src= "badge-iphone.png" alt="appstore"/> 
     <img class= "android" src= "images/badge-android.png" alt="android"/>
-
+</div>
     
     <footer class="footer">
       <ul>
