--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <body>
     <section 1>
       <div class="section-1">
+        <img class= "phones" src= "images/phones.png" alt= "phones"/>
+      </section>
+
+      <section 2>
         <img class= "brand" src= "images/brand.png" alt= "brand"/>
         <div>
       <a href= " # " class="log-in-button"> Log in</a>
       </div>
-        <img class= "phones" src= "images/phones.png" alt= "phones"/>
-
-    
     <h1>Capture and Share the World's Moments</h1>
 
     <p>Instagram is a fast, beautiful and fun way to share your life with
@@ -27,6 +28,7 @@
     <img class= "appstore" src= "badge-iphone.png" alt="appstore"/> 
     <img class= "android" src= "images/badge-android.png" alt="android"/>
 </div>
+</section>
     
     <footer class="footer">
       <ul>
