--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
         <div>
       <a href= " # " class="log-in-button"> Log in</a>
       </div>
-    <h1>Capture and Share the World's Moments</h1>
 
+      <div class="content">
+    <h1>Capture and Share the World's Moments</h1>
     <p>Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free?</p>
     <img class= "appstore" src= "badge-iphone.png" alt="appstore"/> 
     <img class= "android" src= "images/badge-android.png" alt="android"/>
+</div>
 </div>
 </section>
     
