--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="content">
-    <h1>Capture and Share the World's Moments</h1>
+    <h1 class="tittle">Capture and Share the World's Moments</h1>
     <p>Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
