--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
   <body>
+    <main>
     <section 1>
       <div class="section-1">
         <img class= "phones" src= "images/phones.png" alt= "phones"/>
@@ -31,7 +32,7 @@
 </div>
 </section>
     
-    <footer class="footer">
+    <div class="footer">
       <ul>
         <li> <a href="#"> About Us </a> </li>
         <li> <a href="#"> Support </a> </li>
@@ -43,7 +44,8 @@
         <li> <a href="#"> Terms</a> </li>
       </ul>
       &copy; 2014 Instagram
-    </footer>
+      </div>
   </section>
+</main>
   </body>
 </html>
