--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <body>
     <main>
+    <img class= "frame" src= "images/frame.png" alt= "frame"/>
     <section 1>
       <div class="section-1">
         <img class= "phones" src= "images/phones.png" alt= "phones"/>
