--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div>
 </section>
     
-    <div class="footer">
+    <nav">
       <ul>
         <li> <a href="#"> About Us </a> </li>
         <li> <a href="#"> Support </a> </li>
@@ -45,8 +45,7 @@
         <li> <a href="#"> Terms</a> </li>
       </ul>
       &copy; 2014 Instagram
-      </div>
-  </section>
-</main>
+    </nav>
+    </main>
   </body>
 </html>
