Add style.css except the footer

--- a/index.html
+++ b/index.html
@@ -6,43 +6,51 @@
     <title>Instagram Clone</title>
     <link rel="stylesheet" href="styles/style.css">
   </head>
+
   <body>
-    <section class="smartphones-pic">
-      <img src="images/phones.png" alt="Image of two smartphones">
+    <section class="container">
+      <article class="smartphones-pic">
+          <img src="images/phones.png" alt="Image of two smartphones">
+      </article>
+  
+      <article class="column-display">
+        <div class="Logo-LogIn">
+          <a href="#" alt="Instagram Home Page" class="home-page">
+            <img src="images/brand.png" alt="Instagram Logo">
+          </a>
+          <button type="submit" class="login">
+            <img src="images/home.png" alt="Home Logo" class="home-logo">
+            Log in
+          </button>
+        </div>
+  
+        <div class="text-section">
+          <h1>
+            Capture and Share the World's Moments
+          </h1>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+        <div class="downloads">
+          <a href="#" alt="Download on the App Store" class="download-apple">
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+          </a>
+          <a href="#" alt="Get it on Google Play" class="download-google">
+            <img src="images/badge-android.png" alt="Get it on Google Play">
+          </a>
+        </div>
+        </div>
+      </article>
     </section>
-    <section class="Logo-LogIn">
-      <img src="images/brand.png" alt="Instagram Logo">
-      <button type="submit" class="login">
-        <img src="images/home.png" alt="Home Logo">
-        Log in
-      </button>
-    </section>
-    <section class="text-section">
-      <h1>
-        Instagram Capture and Share the World's Moments
-      </h1>
-      <p>
-        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
-        friends and family.
-      </p>
-      <p>
-        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-      </p>
-      <p>
-        Oh yeah, did we mention it's free?
-      </p>
-      <button type="submit">
-        <a href="#" alt="Download on the App Store">
-          <img src="images/badge-iphone.png" alt="Download on the App Store">
-        </a>
-      </button>
-      <button type="submit">
-        <a href="#" alt="Get it on Google Play">
-          <img src="images/badge-android.png" alt="Get it on Google Play">
-        </a>
-      </button>
-    </section>
+    
     <footer class="footer">
       <a href="#" alt="About Us">About Us</a>
       <a href="#" alt="Support">Support</a>
