--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img class= "phones" src= "images/phones.png" alt= "phones"/>
       </section>
 
-      <section 2>
+      <section 2 class="section-2">
         <img class= "brand" src= "images/brand.png" alt= "brand"/>
         <div>
       <a href= " # " class="log-in-button"> Log in</a>
@@ -33,7 +33,7 @@
 </div>
 </section>
     
-    <nav">
+    <nav>
       <ul>
         <li> <a href="#"> About Us </a> </li>
         <li> <a href="#"> Support </a> </li>
