--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+      <img class="phones" src="images/phones.png" alt="phones image">
+      <section>
+        <header>
+        <a href="#">
+          <img class="igLogo" src="images/brand.png" alt="Instagram Logo">
+        </a>
+        <a class="login" href="#">
+          <img src="images/home.png" alt="home button">  Log in</a>
+      </header>
+        <article class="information">
+          <div>
+            <img class="article-background" src="images/frame.png">
+          </div>
+          <h1>
+            Capture and Share the World's Moments 
+          </h1>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family. 
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. 
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+        <a href="#">
+          <img src="images/badge-iphone.png" alt="Iphone download button">
+        </a>
+        <a href="#">
+          <img src="images/badge-android.png" alt="Android download button">
+        </a>
+      </article>
+    </section>
+    <footer>
+        <ul>
+          <li><strong>About Us</strong></li>
+          <li><strong>Support</strong></li>
+          <li><strong>Blog</strong></li>
+          <li><strong>Press</strong></li>
+          <li><strong>Api</strong></li>
+          <li><strong>Jobs</strong></li>
+          <li><strong>Privacy</strong></li>
+          <li><strong>Terms</strong></li>
+          <li class="copyright">&copy; 2014 Instagram</li>
+        </ul>
+    </footer>
   </body>
 </html>
