--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main>
     <img class= "frame" src= "images/frame.png" alt= "frame"/>
-    <section 1>
+    <section 1 class="section=1">
       <div class="section-1">
         <img class= "phones" src= "images/phones.png" alt= "phones"/>
       </section>
