--- a/index.html
+++ b/index.html
@@ -1,16 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="title" content="Instagram">
+  <meta name="description" content="Capture and Share the World´s Moments" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+
+<body>
+
+
+  <!-- 0.Background -->
+  <!-- <header>
+    <div class="main-background">
+      <img src="./images/bgtile.png" alt="Blue Background">
+    </div>
+  </header> -->
+
+
+
+  <main class="landing">
+
+    <!-- 1.Mobiles -->
+    <section class="mobiles main-section">
+
+      <title>
+        <h1>Instagram</h1>
+      </title>
+
+
+      <div class="landing-mobiles">
+        <img src="./images/phones.png" alt="Mobiles Presentation">
+      </div>
+
+    </section>
+
+
+    <!-- 2.Main Content -->
+    <section class="landing-content main-section">
+      <div class="general-container">
+
+
+        <div class="service">
+          <a href="#">
+            <img src="./images/brand.png" alt="Instagram Logo">
+          </a>
+
+
+          <div class="log-in">
+            <a href="#">
+              <img src="./images/home.png" alt="Log In Button">
+            </a>
+            <a class="access" href="#">Log In</a>
+          </div>
+
+        </div>
+
+
+        <div class="content">
+          <h1>Capture and Share the World´s Moments</h1>
+
+          <p> Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to
+            share
+            your life with friends and family.</p>
+
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram –
+            it's that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.</p>
+
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+
+
+
+        <div class="stores">
+          <a href="#"><img src="./images/badge-iphone.png" alt="App Store Button"></a>
+
+          <a href="#"> <img src="./images/badge-android.png" alt="Play Store Button"></a>
+        </div>
+      </div>
+
+    </section>
+  </main>
+
+
+
+  <!-- 3.Footer -->
+  <footer>
+
+    <ul class="directories">
+      <li><a href="#">About Us</a></li>
+
+      <li><a href="#">Support</a></li>
+
+      <li><a href="#">Blog</a></li>
+
+      <li><a href="#">Press</a></li>
+
+      <li><a href="#">Api</a></li>
+
+      <li><a href="#">Jobs</a></li>
+
+      <li><a href="#">Privacy</a></li>
+
+      <li><a href="#">Terms</a></li>
+
+
+      <li>
+        <article class="copyright">©2014 Instagram</article>
+      </li>
+    </ul>
+
+  </footer>
+
+
+</body>
+
 </html>
