--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 
   <!-- 0.Background -->
-  <!-- <header>
+  <header>
     <div class="main-background">
       <img src="./images/bgtile.png" alt="Blue Background">
     </div>
-  </header> -->
+  </header>
 
 
 
