--- a/index.html
+++ b/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
   <head>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+
+    <link rel="stylesheet" href="/styles/style.css">
+
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+    <div class="top-part">
+      <section class="left-section">
+        <img class="phones-image" src="/images/phones.png" alt="Phones image">
+      </section>
+
+    <section class="right-section">
+      <div class="top-rigth">
+      <img src="/images/brand.png" alt="Instagram Logo">
+      
+      <a id="logIn-button" href="https://www.instagram.com/accounts/login/?hl=es"><b><img class="house" src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/images/home.png?raw=true"> Log in </b></a>
+    
+    </div>
+      <div class="text-description">
+      <h1 class="title-text">Capture and Share<br>the World's Moments</h1>
+      <p class="text-adv1">Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+      <p class="text-adv2">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram — it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p class="text-adv3">Oh yeah, did we mention it's free?</p>
+      <img class="AppStore-image" src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/images/badge-iphone.png?raw=true" alt="App Store Logo">
+      <img class="PlayStore-image" src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/images/badge-android.png?raw=true" alt="Play Store logo">
+      </div>
+    </section>
+    </div>
+
+    <nav class="nav-bar">
+      <ul>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">Api</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a id="copyright" href="#">© 2014 Instagram</a></li>
+      </ul>
+    </nav>
+  </main>
+
   </body>
+
 </html>
