[WEB-MAD DE] Patricia Muñoz de Dios - Terminado, el botón login fatal

--- a/index.html
+++ b/index.html
@@ -1,16 +1,67 @@
-<!DOCTYPE html>
+<!DOCTYPE html >
+
 <html lang="en">
+  
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <main>
+
+      <img src="images/phones.png" alt="iPhones with Instagram display">
+
+      <section class="mainbox">
+
+        <section class="header">
+          <img src="images/brand.png" alt="Instagram logo">
+          <div class="login">
+            <a href="https://www.instagram.com/accounts/login/"><img src="/images/home.png" alt="Home">Log in</a>
+          </div>
+        </section>
+
+        <section class="infobox">
+          <h1>Capture and Share<br>the World's Moments</h1>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+            <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br>Oh yeah, did we mention it's free?
+          </p>
+          <div class="buttons">
+            <a href="#"><img src="/images/badge-iphone.png" alt="Download on the App Store"></a>
+            <a href="#"><img src="/images/badge-android.png" alt="Get it on Play Store"></a>
+          </div>
+        </section>
+
+      </section>
+
+    </main>
+
+    <nav>
+      <ul>
+        <li><a href="https://about.instagram.com/">About Us</a></li>
+        <li><a href="https://help.instagram.com/">Support</a></li>
+        <li><a href="https://about.instagram.com/blog/">Blog</a></li>
+        <li><a href="https://about.instagram.com/blog/">Press</a></li>
+        <li><a href="https://www.instagram.com/developer/">API</a></li>
+        <li><a href="https://www.instagram.com/about/jobs/">Jobs</a></li>
+        <li><a href="https://www.instagram.com/legal/privacy/">Privacy</a></li>
+        <li><a href="https://www.instagram.com/legal/terms/">Terms</a></li>
+        <li class="copy">&copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+
   </body>
 </html>
+
+
+
+
+  <!-- <button type="button" class="login">
+            <img src="/images/home.png" alt="Home">
+            <a href="#">Log in</a>
+          </button> -->
