done, few issues to resolve

--- a/index.html
+++ b/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="bkg">
+      <aside class="image">
+        <img src="images/phones.png" alt="phones" />
+      </aside>
+      <article class="main-cnt">
+        <div class="logo-bar">
+          <div class="logo-img"><img src="images/brand.png" alt="instagram"/></div>
+          <div class="login-btn">
+            <img src="images/home.png" alt="home"/>
+            <a href="#">Log in</a>
+          </div>
+        </div>
+        <div class="text-cnt">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p>Instagram is a <b> fast, beautiful</b> and <b>fun</b> way to share your life with
+            friends and family. <br><br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br><br>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="dwnld-img">
+          <img src="/images/badge-iphone.png" alt="Download on the App Store" />
+          <img src="/images/badge-android.png" alt="Get it on Google Play" />
+        </div>
+      </article>
+    </section>
+    <footer>
+      <ul class="footer-list">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li> 
+        <li>Privacy Terms</li>
+        <li class="copyright">&copy; 2014 Instagram</li>     
+      </ul>
+    </footer>
+      
   </body>
 </html>
