--- a/index.html
+++ b/index.html
@@ -26,38 +26,22 @@
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
         </article>
-        <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/badge-iphone.png" alt="Download in Apple Store">
-        <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/badge-android.png" alt="Get it on Google play">
+        <a title="Iphone" href="#"><img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/badge-iphone.png" alt="Download in Apple Store"></a>
+        <a title="Android" href="#"><img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/badge-android.png" alt="Get it on Google play"></a>
        </div>
     </section>
   </main>
   
     <footer>
       <ul>
-        <li>
-          <p>About us</p>
-        </li>
-        <li>
-          <p>Support</p>
-        </li>
-        <li>
-          <p>Blog</p>
-        </li>
-        <li>
-          <p>Press</p>
-        </li>
-        <li>
-          <p>API</p>
-        </li>
-        <li>
-          <p>Jobs</p>
-        </li>
-        <li>
-          <p>Privacy</p>
-        </li>
-        <li>
-          <p>Terms</p>
-        </li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Term</a></li>
         <li class="Colorspecialfooter">
           <p>&copy; 2014 Instagram</p>
         </li>
