--- a/index.html
+++ b/index.html
@@ -1,51 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="./styles/style.css" />  
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-  </head>
+<head>
+<link rel="stylesheet" href="./styles/style.css" /> 
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Instagram Clone</title>
+</head>
 
-
-  <body>
-    <main>
-    <section 1 class="section=1">
-      <img class= "frame" src= "images/frame.png" alt= "frame"/>
-      <div class="section-1">
-        <img class= "phones" src= "images/phones.png" alt= "phones"/>
-      </section>
-
-      <section 2 class="section-2">
-        <img class= "brand" src= "images/brand.png" alt= "brand"/>
-        <div>
-      <a href= " # " class="log-in-button"> Log in</a>
-      </div>
-
-      <div class="content">
-    <h1 class="title">Capture and Share the World's Moments</h1>
-    <p>Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free?</p>
-    <img class= "appstore" src= "badge-iphone.png" alt="appstore"/> 
-    <img class= "android" src= "images/badge-android.png" alt="android"/>
+<body>
+  <main>
+<div class= "first-part">
+<section class="mobiles-section">
+   <img src="images/phones.png" alt="phones"/>
 </div>
 </section>
-    
-    <nav>
-      <ul>
-        <li> <a href="#"> About Us </a> </li>
-        <li> <a href="#"> Support </a> </li>
-        <li> <a href="#"> Blog </a> </li>
-        <li> <a href="#"> Press </a> </li>
-        <li> <a href="#"> API </a> </li>
-        <li> <a href="#"> Jobs </a> </li>
-        <li> <a href="#"> Privacy </a> </li>
-        <li> <a href="#"> Terms</a> </li>
-      </ul>
-      &copy; 2014 Instagram
-    </nav>
-    </main>
-  </body>
+
+<section class="second-part">
+  <div class="brand">
+    <img src="images/brand.png" alt="Instagram-Logo"/>
+  </div>
+<div class="Text">
+  <h1 class="title">Capture and Share <br> the World's Moments</h1>
+  <p>Instagram is a <strong> fast, beautiful</strong> and  <strong>fun</strong> way to share your life with
+  friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram </p>
+</div>
+</section>
+
+<nav class= "navegation">
+<ul>
+  <li> <a href="#"> About Us </a> </li>
+  <li> <a href="#"> Support </a> </li>
+  <li> <a href="#"> Blog </a> </li>
+  <li> <a href="#"> Press </a> </li>
+  <li> <a href="#"> API </a> </li>
+  <li> <a href="#"> Jobs </a> </li>
+  <li> <a href="#"> Privacy </a> </li>
+  <li> <a href="#"> Terms</a> </li>
+  </ul>
+</nav>
+  </main>
+</body>
 </html>
