--- a/index.html
+++ b/index.html
@@ -4,13 +4,66 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <section>
+        <img src="images/phones.png" alt="iPhones" class="iphones">
+      </section>
+      <section class="container">
+        <a href="#"><img src="images/brand.png" alt="Instagram brand"></a>
+        <a href="#" class="login"><img src="images/home.png" alt="Log in button">Log in</a>
+        <div class="frame">
+        <h1>Capture and Share the World's Moments</h1>
+        <p class="text">
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+        friends and family.</p>
+        <p class="text">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p class="text">Oh yeah, did we mention it's free?</p> 
+        <div class="badges">
+          <figure><img src="images/badge-iphone.png" alt="iphone icon"></figure>
+          <figure><img src="images/badge-android.png" alt="android icon"></figure>
+        </div>  
+      </section>
+      
+    </main>
+      
+
+
+
+
+    <footer>
+      <ul>
+        <li>
+          <a href="#">About us</a>
+        </li>
+        <li>
+          <a href="#">Support</a>
+        </li>
+        <li>
+          <a href="#">Blog</a>
+        </li>
+        <li>
+          <a href="#">Press</a>
+        </li>
+        <li>
+          <a href="#">Api</a>
+        </li>
+        <li>
+          <a href="#">Jobs</a>
+        </li>
+        <li>
+          <a href="#">Privacy</a>
+        </li>
+        <li>
+          <a href="#">Terms</a>
+        </li>
+        <li>
+          <p>&copy; 2014 Instagram</p>
+        </li>
+      </ul>
+    </footer> 
   </body>
 </html>
